--- a/kel2.css
+++ b/kel2.css
@@ -1,3 +1,12 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    outline: none;
+    border: none;
+    text-decoration: none;
+  }
+
 body {
     font-family: sans-serif
 }   
@@ -172,6 +181,10 @@ footer .links a {
     padding: 1rem 1rem;
 }
 
+footer .links a:hover {
+    color: black;
+}
+
 footer .credit {
     font-size: 1rem;
 }
@@ -179,3 +192,9 @@ footer .credit {
 footer .credit a{
     color: white;
 }
+
+@media (max-width: 450px) {
+    html {
+      font-size: 55%;
+    }
+  }
