--- a/kel2.css
+++ b/kel2.css
@@ -8,6 +8,7 @@
   }
 
 body {
+    font-size: 16px;
     font-family: sans-serif
 }   
 
@@ -37,13 +38,14 @@ body {
     display: inline-block;
     font-size: 1.2rem;
     margin: 0 1rem;
+    padding: 10px 20px;
 }
 
 .home {
     min-height: 100vh;
     display: flex;
     align-items: center;
-    background-image: url(images/blue_night_moon_over_lake.jpg);
+    background-image: url(images/mobil.png);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -176,9 +178,11 @@ input:required {
 footer {
     background-color: brown;
     text-align: center;
-    padding: 0.8rem 0 1rem;
-    margin-top: 10rem;
+    padding: 0.8rem 0 2rem;
+    margin-top: 3rem;
 }
+
+footer
 
 footer .links {
     /* margin-bottom: 1rem; */
@@ -196,11 +200,12 @@ footer .links a:hover,
 }
 
 footer .credit {
-    font-size: 1rem;
+    font-size: 0.7rem;
 }
 
 footer .credit a{
     color: white;
+    font-weight: 700;
 }
 
 
@@ -253,7 +258,34 @@ footer .credit a{
     display: block;
 }
 
+@media (max-width: 758px){
 
+    html {
+        font-size: 60%;
+    }
+
+    .navbar .navbar-nav {
+        position: absolute;
+        top: 3%;
+        right: 45%;
+        width: 30rem;
+        height: 100vh;
+    }
+    
+    .navbar .navbar-nav a {
+        /* display: block; */
+        margin: 1.4rem;
+        padding: 0.5rem;
+        font-size: 1.4rem;
+      }
+    
+    .navbar .navbar-logo {
+        display: block;
+        margin-bottom: 10px;
+    }
+
+
+}
 
 @media (max-width: 450px) {
     html {
