--- a/kel2.css
+++ b/kel2.css
@@ -132,51 +132,41 @@ th {
     height: 100%;
 }
 
-
-.perjalanan h2 span {
-    color: yellowgreen;
-
-}
-
-.perjalanan h2 {
+.galeri {
+    padding: 2opx;
     text-align: center;
-    padding-top: 5rem;
 }
 
-.box {
-    height: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    margin: 2em 0em;
-  }
+.galeri h2 {
+    text-align: center;
+}
 
-
-.img {
+.isigaleri {
     display: flex;
-    flex-direction: column;
     flex-wrap: wrap;
     justify-content: center;
-    align-items: center;
-    background-color: aqua;
-    color: blue;
-    box-shadow: 1px 1px 20px 1px black;
-    flex: 1 1  250px;
-    margin: 1em;
-    border-radius: 20px;
-
-  }
-
-.box img {
-    width: 250px;
-    height: 250px;
-    margin: 2em;
-      
+    gap: 20px;
 }
 
-.img p {
-    text-align: justify;
-    padding: 1rem;
+.images {
+    /* background-color: gray; */
+    padding: 10px;
+    border-radius: 8px;
+    width: 250px;
+    text-align: center;
+    box-shadow: 0 4px 8px rgba(2, 2, 2, 0.1);
+}
 
+.images img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+}
+
+.images p {
+    margin-top: 10px;
+    font-size: 0,5em;
+    text-align: center;
 }
 
 form  div {
@@ -230,40 +220,6 @@ footer .credit {
 footer .credit a{
     color: white;
     font-weight: 700;
-}
-
-
-.galeri {
-    padding: 40px;
-}
-
-.isigaleri {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    padding: 20px;
-}
-
-.images {
-    flex-basis: calc(25% - 20px);
-    padding: 10px;
-    /* box-shadow: 0 4px 8px rgba(red, green, blue, alpha); */
-}
-
-.images p {
-    text-align: justify;
-    padding-top: 10px;
-
-
-}
-
-.images img{
-    /* height: 350px; */
-    /* width: 650spx; */
-    width: 100%;
-    height: auto;
-    display: block;
-
 }
 
 .isiytb {
@@ -339,7 +295,7 @@ footer .credit a{
 
     .navbar-nav a {
         font-size: 14px;
-        margin: 3px 0;
+        margin: 3px 5px;
     }
   }
 
