--- a/kel2.css
+++ b/kel2.css
@@ -178,7 +178,8 @@ th {
 }
 
 .isivideo,
-.isiytb {
+.isiytb,
+.isiaudio {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -198,6 +199,8 @@ th {
     padding: 10px;
     overflow: hidden;
 }
+
+.audio 
 
 .form {
     display: flex;
