--- a/kel2.css
+++ b/kel2.css
@@ -41,10 +41,8 @@ body {
 
 .navbar a {
     color: white;
-    /* display: inline-block; */
     font-size: 22px;
     margin: 0 15px;
-    /* padding: 10px ; */
 }
 
 .home {
@@ -70,8 +68,7 @@ body {
 }
 
 .home .homi p {
-    font-size: 25px;
-    padding: 0 10rem;
+    font-size: 1.5rem;
     margin-top: 0.5rem;
     line-height: 1.2;
     font-weight: 100;
